# strands-rs

./: Cargo.toml  README.md  package-lock.json
examples/: custom_tool.rs  mcp.rs
examples/hello_strands/: main.rs
src/: agent.rs  lib.rs  mcp_client.rs  message.rs  tool.rs
src/model/: anthropic.rs
