[package]
name = "strands"
description = "Unofficial Rust implementation of Strands SDK"
authors = ["Chay Nabors (chaynabors@gmail.com)"]
license = "MIT OR Apache-2.0"
version = "0.2.1"
edition = "2024"
publish = true

[features]
serde = ["dep:serde"]

[dependencies]
anthropoki = "0.3.0"
async-stream = "0.3.6"
futures = { version = "0.3.31" }
rmcp = { version = "0.3.0", features = ["base64", "client", "macros", "server", "transport-async-rw", "transport-child-process"], default-features = false }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = "1.0.145"
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.100"
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "io-std", "tracing", "fs", "macros"] }
tracing-subscriber = "0.3.22"
